--- a/PAGES/01c_vscode/index.html
+++ b/PAGES/01c_vscode/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="features_and_keyboard_shortcuts" class="scrollspy section-bg-color">
+<section id="features_and_keyboard_shortcuts" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2875,7 +2875,7 @@ color: white;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
