--- a/PAGES/05b_immutables/index.html
+++ b/PAGES/05b_immutables/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="defining_mutability" class="scrollspy">
+<section id="defining_mutability" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2826,7 +2826,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="examples_of_mutability_and_immutability" class="scrollspy section-bg-color">
+<section id="examples_of_mutability_and_immutability" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2917,7 +2917,7 @@ pop&#33;&#40;x&#41;           # error, just like push&#33;&#40;x, &lt;some eleme
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
