--- a/PAGES/05f_indexing/index.html
+++ b/PAGES/05f_indexing/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2822,7 +2822,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="logical_indexing" class="scrollspy section-bg-color">
+<section id="logical_indexing" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2846,7 +2846,7 @@ y &#61; &#91;true, false, true&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="boolean_functions_and_operators_for_logical_indexing" class="scrollspy">
+<section id="boolean_functions_and_operators_for_logical_indexing" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2913,7 +2913,7 @@ y            &#61; x&#91;condition.&#40;x&#41;&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="logical_indexing_through_in_and" class="scrollspy section-bg-color">
+<section id="logical_indexing_through_in_and" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3051,7 +3051,7 @@ bool_indices &#61; x .∉ Ref&#40;set_numbers&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="the_functions_findall_and_filter" class="scrollspy">
+<section id="the_functions_findall_and_filter" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3129,7 +3129,7 @@ y &#61; filter&#40;a -&gt; a &gt; 7, x&#41;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
