--- a/PAGES/05g_views/index.html
+++ b/PAGES/05g_views/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2828,7 +2828,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="mutation_via_vectors" class="scrollspy section-bg-color">
+<section id="mutation_via_vectors" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2947,7 +2947,7 @@ x&#91;:&#93; &#61; x .* 10</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="mutation_via_broadcasting" class="scrollspy">
+<section id="mutation_via_broadcasting" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2991,7 +2991,7 @@ x&#91;x .&lt; 0&#93; .&#61; zeros&#40;length&#40;x&#91;x .&lt; 0&#93;&#41;&#41; 
     </div>
   </div>
 </section>
-<section id="combining_and_function_view" class="scrollspy section-bg-color">
+<section id="combining_and_function_view" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3091,7 +3091,7 @@ slice  &#61; 0                  # this creates a new object, it does not modify 
     </div>
   </div>
 </section>
-<section id="mutation_via_for-loops" class="scrollspy">
+<section id="mutation_via_for-loops" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3185,7 +3185,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
