--- a/PAGES/08f_TS-tuples/index.html
+++ b/PAGES/08f_TS-tuples/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2843,7 +2843,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="comparing_tuples_and_vectors" class="scrollspy">
+<section id="comparing_tuples_and_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2972,7 +2972,7 @@ end
     </div>
   </div>
 </section>
-<section id="addressing_variable_arguments_dispatch_by_value" class="scrollspy section-bg-color">
+<section id="addressing_variable_arguments_dispatch_by_value" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3108,7 +3108,7 @@ end
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
