--- a/PAGES/10c_simd_intro/index.html
+++ b/PAGES/10c_simd_intro/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2849,7 +2849,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="what_is_simd" class="scrollspy section-bg-color">
+<section id="what_is_simd" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2862,7 +2862,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="broadcasting_vs_for-loops" class="scrollspy">
+<section id="broadcasting_vs_for-loops" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2874,7 +2874,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="simd_in_broadcasting" class="scrollspy section-bg-color">
+<section id="simd_in_broadcasting" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2931,7 +2931,7 @@ foo&#40;x&#41; &#61; 2 ./ x</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
