--- a/PAGES/11e_multithread_loops/index.html
+++ b/PAGES/11e_multithread_loops/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy">
+<section id="introduction" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2908,7 +2908,7 @@ Iteration 3 is computed on Thread 2</div></div></div> </div>
     </div>
   </div>
 </section>
-<section id="spawn_vs_threads" class="scrollspy section-bg-color">
+<section id="spawn_vs_threads" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3049,7 +3049,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
