--- a/PAGES/02c_scalars/index.html
+++ b/PAGES/02c_scalars/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2821,7 +2821,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="numbers" class="scrollspy">
+<section id="numbers" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2890,7 +2890,7 @@ z &#61; 0/0</code></pre>
     </div>
   </div>
 </section>
-<section id="boolean_variables" class="scrollspy section-bg-color">
+<section id="boolean_variables" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2916,7 +2916,7 @@ z &#61; x &gt; y         # same operation &#40;don&#39;t interpreted it as &#39;
     </div>
   </div>
 </section>
-<section id="arithmetic_operators" class="scrollspy">
+<section id="arithmetic_operators" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2966,7 +2966,7 @@ z &#61; x &gt; y         # same operation &#40;don&#39;t interpreted it as &#39;
 </tbody>
 </table>
  <br/></p>
-<p>It&#39;s worth noting that all the operators presented above are  <em>binary</em>. Consequently, they follow the syntax <code>x &lt;symbol&gt; y</code>, as indicated in our <a href="/julia_book/PAGES/02b_variables/#operators">discussion</a> about the syntax of operators.</p>
+<p>It&#39;s worth noting that all the operators presented above are  <em>binary</em>. Consequently, they follow the syntax <code>x &lt;symbol&gt; y</code>, as indicated in our <a href="/julia_book/PAGES/02b_variables/#operators">discussion</a> about syntax of operators.</p>
 <p>      </div>
     </div>
   </div>
@@ -2989,7 +2989,7 @@ z &#61; x &gt; y         # same operation &#40;don&#39;t interpreted it as &#39;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
