--- a/PAGES/03d_scope/index.html
+++ b/PAGES/03d_scope/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2829,7 +2829,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="global_and_local_variables" class="scrollspy">
+<section id="global_and_local_variables" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2877,7 +2877,7 @@ end</code></pre>
     </div>
   </div>
 </section>
-<section id="the_role_of_functions" class="scrollspy section-bg-color">
+<section id="the_role_of_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2922,7 +2922,7 @@ y          &#61; double&#40;x&#41;</code></pre>
     </div>
   </div>
 </section>
-<section id="recommendations_for_the_use_of_functions" class="scrollspy">
+<section id="recommendations_for_the_use_of_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3099,7 +3099,7 @@ expenditure_iPhones &#61; expenditure&#40;gross_value, tax_paid&#41;</code></pre
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
