--- a/PAGES/05e_slices/index.html
+++ b/PAGES/05e_slices/index.html
@@ -2811,7 +2811,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2829,7 +2829,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="slices_and_the_operator" class="scrollspy">
+<section id="slices_and_the_operator" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2895,7 +2895,7 @@ x&#91;1&#93; &#61; 0        # it does NOT modify &#39;y&#39;</code></pre>
     </div>
   </div>
 </section>
-<section id="the_function_view" class="scrollspy section-bg-color">
+<section id="the_function_view" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3019,7 +3019,7 @@ end</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
