--- a/PAGES/09b_onAllocations/index.html
+++ b/PAGES/09b_onAllocations/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2842,7 +2842,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="stack_allocations" class="scrollspy">
+<section id="stack_allocations" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2854,7 +2854,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="heap_allocations" class="scrollspy section-bg-color">
+<section id="heap_allocations" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2883,7 +2883,7 @@ color: white;
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
