--- a/PAGES/09e_preallocations/index.html
+++ b/PAGES/09e_preallocations/index.html
@@ -2953,7 +2953,7 @@ setTimeout(() => {
     return;
   }}
     </script> -->
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2969,7 +2969,7 @@ setTimeout(() => {
     </div>
   </div>
 </section>
-<section id="initializing_vectors" class="scrollspy">
+<section id="initializing_vectors" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3100,7 +3100,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="pre-allocating_vectors_in_nested_for-loops" class="scrollspy section-bg-color">
+<section id="pre-allocating_vectors_in_nested_for-loops" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3262,7 +3262,7 @@ calling_foo_in_a_loop&#40;output,x&#41; &#61; &#91;sum&#40;foo&#33;&#40;output,x
     </div>
   </div>
 </section>
-<section id="pre-allocations_and_intermediate_steps" class="scrollspy">
+<section id="pre-allocations_and_intermediate_steps" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3471,7 +3471,7 @@ calling_foo_in_a_loop&#40;x, output, temp&#41; &#61; &#91;foo&#33;&#40;x, output
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
