--- a/PAGES/09f_reductions/index.html
+++ b/PAGES/09f_reductions/index.html
@@ -2832,7 +2832,7 @@ color: white;
  <div class="note" style="width:62%" id=remarkCodeContent>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">
       <b> Code Script</b> </span>  </div>  <div class=content>     The scripts of this section are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/09f_reductions/codeDownload"><strong>here</strong></a> under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.11.3.  </div>  </div>  <div style="margin-bottom:-2em"></div>
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2844,7 +2844,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="intuition_about_reductions" class="scrollspy">
+<section id="intuition_about_reductions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2894,7 +2894,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="implementing_reductions" class="scrollspy section-bg-color">
+<section id="implementing_reductions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3019,7 +3019,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="avoiding_memory_allocations_through_reductions" class="scrollspy">
+<section id="avoiding_memory_allocations_through_reductions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3110,7 +3110,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="reductions_via_built-in_functions" class="scrollspy section-bg-color">
+<section id="reductions_via_built-in_functions" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3222,7 +3222,7 @@ foo&#40;x,y&#41; &#61; minimum&#40;a -&gt; a&#91;1&#93; * a&#91;2&#93;, zip&#40;
     </div>
   </div>
 </section>
-<section id="the_reduce_and_mapreduce_functions" class="scrollspy">
+<section id="the_reduce_and_mapreduce_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3379,7 +3379,7 @@ foo&#40;x&#41; &#61; reduce&#40;&#43;, map&#40;a -&gt; 2 * a, x&#41;&#41;</code>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
