--- a/PAGES/09i_lazyBroadcasting/index.html
+++ b/PAGES/09i_lazyBroadcasting/index.html
@@ -2832,7 +2832,7 @@ color: white;
  <div class="note" style="width:62%" id=remarkCodeContent>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">
       <b> Code Script</b> </span>  </div>  <div class=content>     The scripts of this section are available <a href="https://github.com/alfaromartino/julia_book/tree/main//assets/PAGES/09i_lazyBroadcasting/codeDownload"><strong>here</strong></a> under the name <code>allCode.jl</code>. They&#39;ve been tested under Julia 1.11.3.  </div>  </div>  <div style="margin-bottom:-2em"></div>
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2844,7 +2844,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="how_does_broadcasting_work" class="scrollspy">
+<section id="how_does_broadcasting_work" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3002,7 +3002,7 @@ end</code></pre> </div> </div>
     </div>
   </div>
 </section>
-<section id="broadcasting_loop_fusion" class="scrollspy section-bg-color">
+<section id="broadcasting_loop_fusion" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3197,7 +3197,7 @@ foo&#40;a&#41;   &#61; term1&#40;a&#41; &#43; term2&#40;a&#41;</code></pre> </di
     </div>
   </div>
 </section>
-<section id="lazy_broadcasting" class="scrollspy">
+<section id="lazy_broadcasting" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3348,7 +3348,7 @@ foo&#40;x&#41;   &#61; sum&#40;Iterators.map&#40;temp, x&#41;&#41;</code></pre> 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
