--- a/PAGES/10e_simd_unitStrides/index.html
+++ b/PAGES/10e_simd_unitStrides/index.html
@@ -2829,7 +2829,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2843,7 +2843,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="review_of_indexing" class="scrollspy">
+<section id="review_of_indexing" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2904,7 +2904,7 @@ elements  &#61; x&#91;indices&#93;</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="contiguous_blocks_in_memory" class="scrollspy section-bg-color">
+<section id="contiguous_blocks_in_memory" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3248,7 +3248,7 @@ end</code></pre> </div></div>
     </div>
   </div>
 </section>
-<section id="copies_vs_views_overall_effects" class="scrollspy">
+<section id="copies_vs_views_overall_effects" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3400,7 +3400,7 @@ end</code></pre> </div></div>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified March 8, 2025 
+          © Martin Alfaro <br>Last Modified March 9, 2025 
       </span> 
   </div> 
 </footer>
