--- a/PAGES/04d_forloops/index.html
+++ b/PAGES/04d_forloops/index.html
@@ -3197,11 +3197,11 @@ y      &#61; &#91;foo&#40;a&#41; for a in x&#93;          # or y &#61; &#91;foo&
     </div>
   </div>
 </section>
-<section id="multiple_iterations" class="scrollspy section-bg-color">
+<section id="iterating_over_multiple_objects" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Multiple Iterations</h2></p>
+        <h2>Iterating over Multiple Objects</h2></p>
 <p>Thus far, we&#39;ve considered for-loops that iterate over single values. We now extend their application to <strong>simultaneous iterations over multiple values</strong>. Specifically, we&#39;ll examine two scenarios: simultaneous iterations over two lists and over both the indices and values of a vector.</p>
  <h4> Iterating over Two Lists </h4>
 <p>Depending on how elements should be simultaneously combined, we can define two approaches to simultaneously iterating over two lists <code>x</code> and <code>y</code>. First, the function <code>Iterators.product&#40;x,y&#41;</code> makes it possible to iterate over all the possible combinations of elements. This function is part of the package <code>Iterators</code>, which is imported by default in each Julia session.</p>
@@ -3958,7 +3958,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#multiple_iterations" data-offset="-40">Multiple Iterations</a>
+          <a href="#iterating_over_multiple_objects" data-offset="-40">Iterating over Multiple Objects</a>
         </li>
         
         <li>
