--- a/PAGES/05b_immutables/index.html
+++ b/PAGES/05b_immutables/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Defining Mutability</h2></p>
-<p>Objects in programming can be broadly classified into two categories: mutable and immutable. <span style="color: rgb(62, 121, 180);"><strong>Mutable objects</strong></span> allow their elements to be modified, appended, or removed at will. These types of objects are designed to be flexible, with <strong>vectors</strong> constituting a prime example.</p>
-<p>In contrast, <span style="color: rgb(62, 121, 180);"><strong>immutable objects</strong></span> are inherently unchangeable: they prevent any additions, removals, or modifications of their elements. This immutability effectively locks variables into a read-only state, safeguarding against unintended changes and potentially entailing performance gains. A common example of immutable objects is <strong>tuples</strong>.</p>
+<p>Objects in programming can be broadly classified into two categories: mutable and immutable. <span style="color: rgb(62, 121, 180);"><strong>Mutable objects</strong></span> allow their elements to be modified, appended, or removed at will. These objects are designed with flexibility in mind, with <strong>vectors</strong> constituting a prime example.</p>
+<p>In contrast, <span style="color: rgb(62, 121, 180);"><strong>immutable objects</strong></span> are inherently unchangeable: they prevent additions, removals, or modifications of their elements. This immutability effectively locks variables into a read-only state, safeguarding against unintended changes and potentially entailing performance gains. A common example of immutable object is <strong>tuples</strong>.</p>
 <p>This section will be relatively brief, focusing solely on the distinctions between mutable and immutable objects. Subsequent sections will expand on their uses and properties.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
