--- a/PAGES/05c_mutation/index.html
+++ b/PAGES/05c_mutation/index.html
@@ -2816,7 +2816,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The upcoming sections will be devoted to <strong>vector mutation</strong>. To properly cover this subject, we first need to understand some preliminary ideas, including:</p>
+<p>The upcoming sections will be devoted to <strong>vector mutation</strong>. However, to properly cover this subject, we first need to introduce some preliminary concepts, including:</p>
 <ul>
 <li><p>the distinction between assignments and mutations</p>
 </li>
@@ -2825,7 +2825,7 @@ color: white;
 <li><p>techniques for vector indexing to select elements</p>
 </li>
 </ul>
-<p>The current section in particular <strong>distinguishes between assignments and mutations of variables</strong>. The difference between them can easily go unnoticed by new users, as both operations use the operator <code>&#61;</code>, despite being fundamentally different. Clearly delineating these concepts is important not only in Julia, but also in other programming languages.</p>
+<p>The current section in particular focuses on <strong>distinguishing between assignments and mutations of variables</strong>. The difference between both operations can easily go unnoticed by new users, as both operations use the operator <code>&#61;</code>, despite being fundamentally different. Clearly delineating these operations is important not only for Julia, but also for other programming languages.</p>
 <p>      </div>
     </div>
   </div>
