--- a/PAGES/05f_indexing/index.html
+++ b/PAGES/05f_indexing/index.html
@@ -2827,7 +2827,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Logical Indexing</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>Logical indexing</strong></span>, also known as  <em>Boolean indexing</em> or  <em>masking</em>, enables the user to select elements based on a set of conditions. The functionality is implemented through a Boolean vector <code>y</code> of the same length as <code>x</code> that serves as a filter. Specifically, the expression <code>x&#91;y&#93;</code> will return a new vector, where <code>true</code> retains the element and <code>false</code> discards it.  The following example illustrates its use.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Logical indexing</strong></span>, also known as  <em>Boolean indexing</em> or  <em>masking</em>, enables the user to select elements based on a set of conditions. The functionality is implemented via a Boolean vector <code>y</code> of the same length as <code>x</code> that serves as a filter. Specifically, the expression <code>x&#91;y&#93;</code> will return a new vector, where <code>true</code> retains the element and <code>false</code> discards it.  The following example illustrates its use.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2856,8 +2856,8 @@ y &#61; &#91;true, false, true&#93;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-        <button class="tablink first_tab active" data-id="">Indexing through a Broadcast Operator</button>
-    <button class="tablink" data-id=""> Indexing through a Broadcast Function</button>    
+        <button class="tablink first_tab active" data-id="">Indexing via Broadcasting Operator</button>
+    <button class="tablink" data-id=""> Indexing via Broadcasting Function</button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x            &#61; &#91;1, 2, 3, 100, 200&#93;
@@ -2885,8 +2885,8 @@ y            &#61; x&#91;condition.&#40;x&#41;&#93;</code></pre>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
-        <button class="tablink first_tab active" data-id="">Indexing through a Broadcast Operator</button>
-    <button class="tablink" data-id=""> Indexing through a Broadcast Function</button>    
+        <button class="tablink first_tab active" data-id="">Indexing via Broadcasting Operator</button>
+    <button class="tablink" data-id=""> Indexing via Broadcasting Function</button>    
 </div><div data-id="" class="tabcontent active">
 <div class="code_in_modal"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x            &#61; &#91;3, 6, 8, 100&#93;
@@ -2913,11 +2913,11 @@ y            &#61; x&#91;condition.&#40;x&#41;&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="logical_indexing_through_in_and" class="scrollspy">
+<section id="logical_indexing_via_in_and" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Logical Indexing Through <code>in</code> and <code>∈</code></h2></p>
+        <h2>Logical Indexing via <code>in</code> and <code>∈</code></h2></p>
 <p> <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content>     The symbols used in this section, <code>∈</code> and <code>∉</code>, can be inserted through Tab Completion:</p>
@@ -2979,7 +2979,7 @@ y            &#61; x&#91;bool_indices&#93;</code></pre>
 <p>  </p></details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     The <code>in</code> function has an alternative &quot;curried&quot; version, allowing the user to broadcast <code>in</code> without relying on the expression <code>Ref&#40;set_numbers&#41;</code>. Currying techniques were introduced <a href="/julia_book/4d_vectorizing/#currying_optional">here</a>, and they broadcast <code>in</code> through <code>in&#40;set_numbers&#41;.&#40;x&#41;</code>, as in the example below.</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     The <code>in</code> function has an alternative &quot;curried&quot; version, allowing the user to broadcast <code>in</code> without relying on the expression <code>Ref&#40;set_numbers&#41;</code>. Currying techniques were introduced <a href="/julia_book/4d_vectorizing/#currying_optional">here</a>, and they broadcast <code>in</code> by the expression <code>in&#40;set_numbers&#41;.&#40;x&#41;</code>, as in the example below.</p>
 <p> <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3745,7 +3745,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#logical_indexing_through_in_and" data-offset="-40">Logical Indexing Through ~~~`in`~~~ and ~~~`∈`~~~</a>
+          <a href="#logical_indexing_via_in_and" data-offset="-40">Logical Indexing via ~~~`in`~~~ and ~~~`∈`~~~</a>
         </li>
         
         <li>
