--- a/PAGES/05g_views/index.html
+++ b/PAGES/05g_views/index.html
@@ -2991,11 +2991,11 @@ x&#91;x .&lt; 0&#93; .&#61; zeros&#40;length&#40;x&#91;x .&lt; 0&#93;&#41;&#41; 
     </div>
   </div>
 </section>
-<section id="combining_and_function_view" class="scrollspy">
+<section id="combining_and_the_function_view" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Combining <code>.&#61;</code> and Function <code>view</code> </h2></p>
+        <h2>Combining <code>.&#61;</code> and The Function <code>view</code> </h2></p>
 <p>In some scenarios, we may need to perform various operations over the same slice. However, repeatedly referencing the same slice is inefficient, error-prone, and tedious. In such cases, a more convenient approach is to create a slice&#39;s view through the <code>view</code> function, and then operate over it. </p>
 <p>The following example shows the same operation can be applied using a <code>view</code> and without it. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
@@ -3801,7 +3801,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#combining_and_function_view" data-offset="-40">Combining ~~~`.=`~~~ and Function ~~~`view`~~~ </a>
+          <a href="#combining_and_the_function_view" data-offset="-40">Combining ~~~`.=`~~~ and The Function ~~~`view`~~~ </a>
         </li>
         
         <li>
