--- a/PAGES/06d_functionsVectors/index.html
+++ b/PAGES/06d_functionsVectors/index.html
@@ -2914,11 +2914,11 @@ y      &#61; sort&#40;x, by &#61; foo&#41;      # same as sort&#40;x, by &#61; x
     </div>
   </div>
 </section>
-<section id="indices_of_sorted_elements" class="scrollspy section-bg-color">
+<section id="retrieving_indices_of_sorted_elements" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
-        <h2>Indices of Sorted Elements</h2></p>
+        <h2>Retrieving Indices of Sorted Elements</h2></p>
 <p>While <code>sort</code> returns the ordered  <em>values</em> of the vectors, you may also be interested in the  <em>indices</em> of the sorted elements. This functionality is provided by the function <code>sortperm</code>, which returns the indices of <code>x</code> that would result in <code>sort&#40;x&#41;</code>. In other words, <code>x&#91;sortperm&#40;x&#41;&#93; &#61;&#61; sort&#40;x&#41;</code> is true. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> The name <code>sortperm</code> originates from &quot;sorting permutation&quot;. Although the name might seem somewhat opaque, it arises because the operation returns the permutation of indices that would sort the original vector.  </span></span></p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -3992,7 +3992,7 @@ for multiple pics in a row
         </li>
         
         <li>
-          <a href="#indices_of_sorted_elements" data-offset="-40">Indices of Sorted Elements</a>
+          <a href="#retrieving_indices_of_sorted_elements" data-offset="-40">Retrieving Indices of Sorted Elements</a>
         </li>
         
         <li>
