--- a/PAGES/03a_overview/index.html
+++ b/PAGES/03a_overview/index.html
@@ -2816,8 +2816,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2></h2></p>
-<p>The upcoming Chapters 3 and 4 will cover core tools for programming: functions, conditional statements, and for-loops. Chapter 3 in particular focuses on <strong>functions</strong>, which constitute the backbone of Julia programming. Their use is tightly connected to achieving high performance. Given their importance, we&#39;ll spend a considerable amount of time discussing them.</p>
-<p>The presentation of functions is structured into three categories:</p>
+<p>The upcoming Chapters 3 and 4 will cover three core tools for programming: functions, conditional statements, and for-loops. Chapter 3 in particular focuses on <strong>functions</strong>, which constitute the backbone of Julia programming. As their tightly linked to achieving high performance, we&#39;ll dedicate considerable time to discussing their usage.</p>
+<p>Our coverage of functions will be organized into three categories, based on who defines them:</p>
 <div class="enumRomanSpace"><ol>
 <li><p>built-in functions, </p>
 </li>
@@ -2826,9 +2826,9 @@ color: white;
 <li><p>user-defined functions.</p>
 </li>
 </ol></div>
-<p>The first two types of function are made available in the workspace by loading packages &#40;implicitly or explicitly&#41;. This connection between packages and functions is why we&#39;ll explore the concepts together in <a href="/julia_book/PAGES/03b_packages/">Section 3b</a>, relegating user-defined functions to <a href="/julia_book/PAGES/03c_functions/">Section 3c</a>. </p>
-<p>Studying functions also require a crisp understanding of global and local variables. This distinction sets the stage for discussing the view of functions as self-contained mini-programs representing a task. Taking advantage of this, we present both subjects together in <a href="/julia_book/PAGES/03d_scope/">Section 3d</a>. This interpretation of functions encourages good practices in terms of their use, an aspect that will become more apparent as we move forward in subsequent chapters. At this point, it&#39;ll suffice if you only become familiar with this view of functions.</p>
-<p>Finally, we&#39;ll introduce the concept of broadcasting in <a href="/julia_book/PAGES/03c_functions/">Section 3e</a>. I recommend mastering this technique, which allows you to apply the same function to each element in a collection. Its use is widespread in Julia and other languages. </p>
+<p>The first two types of function become available in the workspace via packages, which may be loaded implicitly or explicitly. This connection between packages and functions leads us into exploring the concepts together in <a href="/julia_book/PAGES/03b_packages/">Section 3b</a>. Instead, user-defined functions are left for <a href="/julia_book/PAGES/03c_functions/">Section 3c</a>. </p>
+<p>A firm grasp of functions requires understanding variable scope, including the distinction between global and local variables. By establishing this difference, we&#39;ll frame functions as self-contained mini-programs designed to perform a specific task. Both subjects are presented together in <a href="/julia_book/PAGES/03d_scope/">Section 3d</a>.  This perspective on functions will lead to the identification of good practices for using functions, which will have significant implications for the structure of code as we progress. At this point, nonetheless, it suffices if you start becoming familiar with this view.</p>
+<p>Finally, we&#39;ll introduce the concept of broadcasting in <a href="/julia_book/PAGES/03c_functions/">Section 3e</a>. Mastering this technique is crucial, as it lets you seamlessly apply the same function to each element in a collection. Broadcasting is a widely used technique not only in Julia, but also in other programming languages like Python.</p>
  <div style="visibility: hidden;margin-bottom:-4em">
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
 this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
